--- a/src/renderer/components/Theme/Dark/Variables.scss
+++ b/src/renderer/components/Theme/Dark/Variables.scss
@@ -45,6 +45,7 @@ $--dk-panel-border-color: #EBECF0 !default;
 /* Form Actions
 -------------------------- */
 $--dk-form-actions-background: #343434 !default;
+$--dk--background-color-gray: #191B1D  !default;
 
 /* Task
 -------------------------- */
