--- a/src/renderer/components/Theme/Variables.scss
+++ b/src/renderer/components/Theme/Variables.scss
@@ -69,7 +69,7 @@ $--border-color-extra-light: #F2F6FC !default;
 /// color|1|Background Color|4
 $--background-color-base: #F5F7FA !default;
 
-$--background-color-gray: #191B1D !default;
+// $--background-color-gray: #191B1D !default;
 /* Link
 -------------------------- */
 $--link-color: $--color-primary-light-2 !default;
