任务页面主题

--- a/src/renderer/components/Theme/Dark.scss
+++ b/src/renderer/components/Theme/Dark.scss
@@ -92,10 +92,6 @@
     color: $--dk-task-item-text-color;
   }
 
-  .task-actions {
-    color: $--dk-task-action-color;
-  }
-
   .task-item-actions {
     background-color: $--dk-task-item-action-background;
     border-color: $--dk-task-item-action-border-color;
@@ -154,19 +150,7 @@
     background-color: #4a4a4a;
   }
 
-  .el-input__inner,
-  .el-textarea__inner {
-    background-color: #373737;
-    border-color: #5f5f5f;
-    color: #eee;
-    &:focus {
-      outline: none;
-      border-color: $--color-primary;
-    }
-    &::placeholder {
-      color: #777;
-    }
-  }
+ 
 
   .el-input.is-disabled .el-input__inner {
     background-color: #373737;
@@ -174,7 +158,7 @@
     color: #aaa;
   }
 
-  .el-input-group__append,
+  // .el-input-group__append,
   .el-input-group__prepend {
     background-color: #333;
     border-color: #5f5f5f;
@@ -202,6 +186,31 @@
 
   .el-input-number.is-controls-right .el-input-number__decrease {
     border-left-color: #5f5f5f;
+  }
+
+  .el-form-item__content {
+    .el-textarea__inner, .el-input__inner {
+      background-color: $--dk--background-color-gray !important;
+      color: #eee;
+      &:focus {
+        outline: none;
+        border-color: $--color-primary;
+      }
+      &::placeholder {
+        color: #777;
+      }
+    }
+    .el-input-group__append {
+      background-color: $--dk--background-color-gray !important;
+    }
+    .el-button.select-directory.el-button--default.el-button--mini {
+      background-color: $--dk--background-color-gray !important;
+    }
+  }
+  .upload-torrent {
+    .el-upload, .el-upload-dragger {
+      background-color: $--dk--background-color-gray !important;
+    }
   }
 
   .el-form-item__label,
@@ -380,7 +389,8 @@
       background-color: $--dk-table-th-background;
       color: $--dk-table-text-color;
     }
-    th.is-leaf, td {
+    th.is-leaf,
+    td {
       background-color: $--dk-table-background;
       color: $--dk-table-text-color;
       border-bottom-color: $--dk-table-border-color;
@@ -391,11 +401,16 @@
   }
 
   .el-table--enable-row-hover .el-table__body tr:hover > td,
-  .el-table--enable-row-hover .el-table__body tr.el-table__row--striped:hover > td {
+  .el-table--enable-row-hover
+    .el-table__body
+    tr.el-table__row--striped:hover
+    > td {
     background-color: $--dk-table-hover-background;
   }
 
-  .el-table--group::after, .el-table--border::after, .el-table::before {
+  .el-table--group::after,
+  .el-table--border::after,
+  .el-table::before {
     background-color: $--dk-table-border-color;
   }
 
@@ -462,5 +477,17 @@
 
   .el-tag__close.el-icon-close {
     color: #2d2d2d;
+  }
+
+  // .task-state-actions {
+  //   .task-state-ul {
+  //     .task-action-start,
+  //     .task-action-stop {
+  //       background: $--dk--background-color-gray;
+  //     }
+  //   }
+  // }
+  .task-actions svg {
+    color: $--dk-panel-title-color;
   }
 }
